<resources>
    <string name="app_name">Add A Book</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publicationYear">Publication Year</string>
    <string name="type">Type</string>
    <string name="fiction">Fiction</string>
    <string name="nonfiction">Non-Fiction</string>
    <string name="other">Other</string>
    <string name="read">Read</string>
    <string name="rating">Rating</string>
    <string name="button_send">Add a Book</string>
    <string name="id">Id</string>
    <string name="label_note_id">Book Id</string>
    <string name="label_note_title">Book Title</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_login">Sign in</string>
    <string name="location">Location</string>
    <string name="create_account">Create Account</string>
    <string name="add_author">Add An Author</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="userId">User Id</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="label_author">Author</string>
    <string name="value_author">Author</string>
    <string name="button_logout">Log Out</string>

</resources>
