<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <EditText android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id" />

    <EditText android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <EditText android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author" />

    <EditText android:id="@+id/publicationYear"
    android:layout_weight="1"
    android:layout_width="338dp"
    android:layout_height="wrap_content"
    android:hint="@string/publicationYear"
    android:inputType="number" />

    <RadioGroup android:id="@+id/bookType"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton android:id="@+id/fiction"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/fiction"
    android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/nonfiction"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nonfiction"
    android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/other"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/other"
    android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <CheckBox android:id="@+id/bookRead"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:checked="false"
        android:hint="@string/read" />

    <SeekBar android:id="@+id/rating"
    android:layout_weight="1"
    android:layout_width="338dp"
    android:layout_height="wrap_content"
    android:hint="@string/rating"
    android:max="100"
    android:visibility="visible"
    tools:visibility="visible" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="30dp"

        android:elevation="0dp"
        android:layout_height="wrap_content" />


</LinearLayout>
