<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/label_note_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_note_id" />

    <EditText
        android:id="@+id/value_note_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/value_note_title"
        />

    <TextView
        android:id="@+id/label_note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_note_id"
        android:layout_marginTop="12dp"
        android:text="@string/label_note_title" />


    <EditText
        android:id="@+id/value_note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/label_note_title"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/label_note_title" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/label_note_id"
        android:layout_toEndOf="@+id/label_note_id"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="120dp" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/edit"
        android:layout_toEndOf="@+id/edit"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        style="@style/Widget.AppCompat.Button" />
</RelativeLayout>